--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-               "name": "PRABATH-MD",
+               "name": "sufyan-jan",
                "version": "5.0.0",
                "description": "Multi device whatsapp bot by prabath.",
                "main": "lib/client.js",
